2004-01-19  Zoltan Varga  <vargaz@freemail.hu>

	* Assembly.cs (GetManifestResourceStream): Make the IntPtrStream keep
	a reference on the Module object which contains the resource.

	* Module.cs: Decrease the image reference count when the Module is
	garbage collected.

2004-01-16  Martin Baulig  <martin@ximian.com>

	* Assembly.cs: Make the `MonoDebugger_' methods static.

2004-01-16  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* MonoProperty.cs: changed get_property_info so that it only gets the
	values needed. Reduces the allocations needed.

2004-01-15  Martin Baulig  <martin@ximian.com>

	* Assembly.cs: Make the `MonoDebugger_' methods internal.

2004-01-04  Nick Drochak <ndrochak@gol.com>

	* Assembly.cs: Removed unused variable in catch block.Eliminates a build
	warning.

2003-12-29 Ben Maurer  <bmaurer@users.sourceforge.net>

	* MethodBase.cs: Internal method to get param count (this
	way we can get the info for the ilgen without creating
	an array, if we override the method).

2003-12-18  Zoltan Varga  <vargaz@freemail.hu>

	* Assembly.cs: Implement LoadFrom.

2003-12-17  Zoltan Varga  <vargaz@freemail.hu>

	* Assembly.cs: Add stubs for LoadFile.

2003-12-16  Zoltan Varga  <vargaz@freemail.hu>

	* Assembly.cs (GetManifestResourceStream): Only load non-embedded
	resources from files.

2003-12-15  Zoltan Varga  <vargaz@freemail.hu>

	* MonoField.cs (SetValue): Throw an exception if the value cannot be
	converted to the field's type. Fixes #52177.

2003-12-11  Lluis Sanchez Gual <lluis@ximian.com>
	
	* AmbiguousMatchException.cs: Added serialization constructor.
	
2003-12-08  Martin Baulig  <martin@ximian.com>

	* MonoGenericInst.cs (MonoGenericParam): New internal class;
	derives from MonoType.	

2003-12-08  Patrik Torstensson <p@rxc.se>

	* Binder.cs: Added internal helpers to get derived level and select the 
	most derived methodbase (used in GetMethodImpl)

2003-11-25  Zoltan Varga  <vargaz@freemail.hu>
