@@ -1,3 +1,7 @@
+2004-01-25  Martin Baulig  <martin@ximian.com>
+
+	* MonoGenericInst.cs: Honor BindingFlags.DeclaredOnly.
+
 2004-01-19  Zoltan Varga  <vargaz@freemail.hu>
 
 	* Assembly.cs (GetManifestResourceStream): Make the IntPtrStream keep
